<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_auto_msgs</name>
  <version>1.0.0</version>
  <description>Interfaces between core Autoware.Auto components</description>
  <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_geometry_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

